--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,21 @@
+:root {
+  --primary-bg-color-a: #004044;
+  --primary-bg-color-b: #00C0FF;
+  --primary-color-a: #5CE1E6;
+
+  --black: #000000;
+  --white: #FFFFFF; 
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
+  /* Base/Default styles */
+  width: 100vw;
+  height: 100vh;
+  padding: 0px;
+  margin: 0px;
+  font-size: 16px;
+  box-sizing: content-box;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,14 +27,8 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
+
