--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,4 +31,43 @@ a {
   padding: 0px;
 }
 
+/* Define main background */
+/* &::before is rendering the grainy texture */
+#noisy-background-filter::after {
+  position: absolute;
+  bottom: 0px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  content: '';
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: linear-gradient(135deg, #004044, #00C0FF);
+}
 
+#noisy-background-filter::before {
+  opacity: 0.4; 
+}
+
+#noisy-background-filter::after, #noisy-background-filter::before {
+  mix-blend-mode: soft-light;
+}
+
+.socials_links_gap_active {
+  animation: socials_links_active 0.6s forwards;
+}
+
+.socials_links_gap_inactive {
+  animation: socials_links_inactive 0.4s forwards;
+}
+
+@keyframes socials_links_active {
+  from {width: 0px;}
+  to {width: 100%;}
+}
+
+@keyframes socials_links_inactive {
+  0% {width: 100%;} 
+  100% {width: 0px;}
+}
