--- a/styles/templates/Home-tp.module.css
+++ b/styles/templates/Home-tp.module.css
@@ -11,7 +11,7 @@
 .header {
   width: 100%;
   row-gap: 5px;
-  top: 7%;
+  top: 10%;
   
   position: absolute;
   display: flex;
@@ -27,13 +27,14 @@
 .main_heading {
   font-family: 'League Spartan', sans-serif;
   font-style: normal;
-  color: var(--primary-color-a);
+  color: var(--white);
 
   font-weight: 800;
   font-size: 4.625rem;
 }
 
-.main_heading_span:nth-child(2) {
+/* Gotta fix this up innit */
+.home_main_heading_span {
   color: var(--black);
   font-weight: 800;
 }
@@ -82,11 +83,13 @@
 .socials_logo_container {
   width: fit-content;
   height: fit-content;
-
   position: relative;
   display: inherit;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+
+  z-index: 2;
 }
 
 .image_overlay {
@@ -94,10 +97,12 @@
   background: transparent;
   width: 100%; 
   height: 100%;
+  border-radius: 50%;
 }
 
 .socials_links_container {
-  width: 57.5rem;
+  width: 50rem;
+  height: 390px;
 
   display: flex;
   align-items: center;
@@ -106,10 +111,16 @@
   margin: auto;
 }
 
+.socials_link_container {
+  font-size: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .socials_links {
   width: 100%;
   height: fit-content;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,10 +128,12 @@
 
 .socials_list {
   width: 100%;
-  height: fit-content;
+  z-index: 1;
 
-  display: flex;
-  justify-content: space-between;
+  display: flex; 
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .socials_list_a, .socials_list_b {
@@ -131,4 +144,84 @@
   list-style: none;
   grid-template-columns: 1fr 1fr;
   column-gap: 2.5rem;
+}
+
+.socials_list_item {
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.socials_links_gap {
+  width: 0px;
+  height: 52px;
+}
+
+.socials_logo_container {
+  max-width: 380px;
+  max-height: 380px;
+}
+
+.socials_logo_image {
+  max-width: 380px;
+  max-height: 380px;
+}
+
+/* For tablet */
+@media screen and (max-width: 1080px) {
+  .socials_logo_container {
+    max-width: 360px;
+    max-height: 360px;
+  }
+
+  .socials_logo_image {
+    max-width: 360px;
+    max-height: 360px;
+  }
+
+  .socials_links_container {
+    width: 46rem;
+  }
+
+  .subheading {
+    font-size: 1.2rem;
+  }
+
+  .main_heading {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 840px) {
+  .socials_logo_container {
+    max-width: 300px;
+    max-height: 300px;
+  }
+
+  .socials_logo_image {
+    max-width: 300px;
+    max-height: 300px;
+  }
+
+  .socials_links_container {
+    width: 34rem;
+  }
+
+  .socials_list_a, .socials_list_b {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 2.5rem;
+  }
+
+  .subheading {
+    font-size: 1.1rem;
+  }
+
+  .main_heading {
+    font-size: 3.4rem;
+  }
+
 }
